# stemsmith

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  index.html  main.cpp
.github/workflows/: ci.yml  coverage.yml  deploy-frontend.yml
assets/: index-CuVoEzsf.js  index-CuVoEzsf.js.map  index-QeNRfJLA.css
data/: model_manifest.json
docs/: index.html  package-lock.json  tsconfig.json
docs/src/: App.tsx  types.ts
docs/src/api/: client.ts
docs/src/components/: EndpointSelector.tsx  JobCard.tsx  JobConfig.tsx  StatusPanel.tsx  UploadArea.tsx
docs/src/hooks/: useCancel.ts  useJobStatus.ts  useUpload.ts
docs/src/styles/: globals.css  theme.css
examples/: http_server_example.cpp  observer_separation.cpp  progress_example.cpp  simple_separation.cpp
frontend/: package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/api/: client.ts
frontend/src/components/: EndpointSelector.tsx  JobCard.tsx  JobConfig.tsx  Toast.tsx
frontend/src/hooks/: useDownload.ts  useHealth.ts
frontend/src/styles/: globals.css  theme.css
include/: api_server.h  job_builder.h  job_manager.h  job_queue.h  separation_engine.h  server.h
include/demucs_engine/: demucs_engine.h  demucs_model_cache.h
include/stemsmith/: audio_buffer.h  audio_io.h  http_weight_fetcher.h  job_catalog.h  job_config.h  job_result.h  job_runner.h  json_utils.h  model_cache.h  model_manifest.h  model_session.h  model_session_pool.h  separation_engine.h  service.h  stemsmith.h  weight_fetcher.h  worker_pool.h
src/: api_server.cpp  audio_buffer.h  audio_io.cpp  audio_io.h  bootstrap.cpp  bootstrap.h  http_weight_fetcher.cpp  job_catalog.cpp  job_catalog.h  job_config.cpp  job_manager.cpp  job_queue.cpp  job_runner.cpp  job_runner.h  json_utils.cpp  model_cache.cpp  model_cache.h  model_manifest.cpp  model_manifest.h  model_session.cpp  model_session.h  model_session_pool.cpp  model_session_pool.h  separation_engine.cpp  separation_engine.h  server.cpp  service.cpp  stemsmith.cpp  worker_pool.cpp  worker_pool.h
src/demucs_engine/: audio_io.cpp  audio_io.h  demucs_engine.cpp  demucs_model_cache.cpp
src/http/: server.cpp  server.h  stemsmithd.cpp
tests/: api_server_test.cpp  audio_io_test.cpp  job_builder_test.cpp  job_catalog_test.cpp  job_config_test.cpp  job_manager_test.cpp  job_runner_test.cpp  model_cache_test.cpp  model_session_pool_test.cpp  model_session_test.cpp  separation_engine_test.cpp  stemsmith_service_test.cpp  test_main.cpp  worker_pool_test.cpp
tests/fixtures/job_config/: basic.json  four_stem.json  invalid.json  unknown_key.json  unknown_model.json  unsupported.json
tests/http/: download_test.cpp  job_registry_test.cpp  server_test.cpp
tests/support/: fake_fetcher.h  fake_session.h
tests/system/: bootstrap_test.cpp
